# dp-codex

./: .gitignore  AGENTS.md  Makefile  README.md  dp-policy.json  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
docs/: EXECUTION-PLAN.md  README.md
docs/adr/: ADR-0001-generation-under-deterministic-gates.md  ADR-0002-goal-state-is-append-only-events.md  ADR-0003-evidence-plans-use-registered-checks-not-raw-shell.md  ADR-0004-decompose-remains-context-fitting-not-semantic-planning.md  ADR-0005-dp-is-a-campaign-control-plane-not-an-agent-runner.md  ADR-0006-blockers-create-deterministic-artifacts.md  (+8 more)
hooks/: install.sh  pre-commit  pre-push
scripts/: run_pilot_migration.sh
tests/: test_adopt.py  test_adopt_apply.py  test_agent_bootstrap.py  test_agent_launch.py  test_agent_response.py  test_agent_usability_evals.py  test_campaign_beads_sync.py  test_campaign_init.py  test_campaign_managed_run.py  test_campaign_manifest.py  test_campaign_pilot.py  test_campaign_readiness.py  test_campaign_recovery.py  test_campaign_refine.py  test_campaign_run.py  test_codex_packaging_docs.py  test_evidence_artifacts_and_verify.py  test_evidence_lint.py  test_evidence_run.py  test_flow_evals.py  test_goal_block_routing.py  test_goal_emit.py  test_goal_lint.py  test_goal_state.py  test_hints.py  test_hooks.py  test_instructions.py  test_loop_ledger.py  test_migrate_aliases.py  test_progressive_disclosure.py  test_release_readiness.py  test_skills.py  test_spec_80_completion_gates.py  test_token_budgets.py  test_toolcards.py
(+290 files in other folders)
