[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dp-codex"
version = "0.1.0"
description = "Codex-native disciplined process toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dp = "dp.cli.main:main"

[dependency-groups]
dev = [
  "jsonschema>=4.25.1",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["dp"]

[tool.hatch.build.targets.wheel]
packages = ["dp"]
